--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,15 +1,15 @@
 body {
-  color: #000;
+  color: #000;;
 }
 
-.scores {
-  display: table;
+#scores {
   position: absolute;
   width: 200px;
   left: 0;
   right: 0;
   margin: auto;
   z-index: 99;
+  display: none;
 }
 
 .scores div {
@@ -19,4 +19,58 @@ body {
   color: #aaa;
   text-shadow: 0 4px 5px rgba(150, 150, 150, 0.5);
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.menu {
+  position: absolute;
+  width: 200px;
+  display: table;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+}
+
+.menu > div:nth-child(1) {
+  text-align: center;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: bold;
+  font-size: 20px;
+}
+.menu > div:nth-child(2) {
+  text-align: center;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: normal;
+  font-size: 13px;
+  margin-bottom: 20px;
+}
+
+.btn {
+  background: #3498db;
+  background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
+  background-image: -moz-linear-gradient(top, #3498db, #2980b9);
+  background-image: -ms-linear-gradient(top, #3498db, #2980b9);
+  background-image: -o-linear-gradient(top, #3498db, #2980b9);
+  background-image: linear-gradient(to bottom, #3498db, #2980b9);
+  -webkit-border-radius: 28px;
+  -moz-border-radius: 28px;
+  border-radius: 28px;
+  font-family: Arial;
+  text-align: center;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.btn:hover {
+  background: #3cb0fd;
+  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+  text-decoration: none;
 }
