--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,5 +1,6 @@
 body {
-  color: #000;;
+  color: #000;
+  overflow: hidden;
 }
 
 #scores {
@@ -19,6 +20,18 @@ body {
   color: #aaa;
   text-shadow: 0 4px 5px rgba(150, 150, 150, 0.5);
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+.scores div:first-child,
+.scores div:last-child {
+  font-size: 20px;
+}
+.scores div:first-child {
+  text-align: right;
+  padding-right: 10px;
+}
+.scores div:last-child {
+  text-align: left;
+  padding-left: 10px;
 }
 
 .menu {
